[gd_scene load_steps=6 format=3 uid="uid://dpuifx4awan0e"]

[ext_resource type="Script" path="res://level/day_results.gd" id="1_d60mh"]
[ext_resource type="Theme" uid="uid://c6vpiadjvp1cl" path="res://pause_menu_theme.tres" id="1_v3rwv"]

[sub_resource type="Animation" id="Animation_b6vub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_y5852"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kwoug"]
_data = {
"RESET": SubResource("Animation_b6vub"),
"fade": SubResource("Animation_y5852")
}

[node name="DayResults" type="CanvasLayer"]
script = ExtResource("1_d60mh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
libraries = {
"": SubResource("AnimationLibrary_kwoug")
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -107.0
offset_right = 122.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v3rwv")

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "End of Day Results"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "People Let in:"

[node name="AcceptedLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "People Refused: "

[node name="RejectedLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Gold Earned: "

[node name="GoldLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="ColorRect/VBoxContainer/Button" to="." method="_on_button_pressed"]
